--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h6 {/* Title */
   line-height: 0;
 
 }
+
 h7 {/* Title */
   font-family: "Inconsolata", monospace;
   font-style: bold;
@@ -93,6 +94,15 @@ footer {
   gap: 30px;
 }
 
+.PageCloseContainer {
+  border: 3px solid rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+  border-radius: 0.5em;
+  display: flex;
+  padding: 30px;
+  gap: 30px;
+}
+
 .BoxesContainer {
   display: flex;
   padding: 50px;
@@ -127,7 +137,7 @@ footer {
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 1000px;
+  height: 1100px;
   text-align: center;
   align-items: center;
   justify-content: center;
